# space-cadet

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml  pr-checks.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
src/space_cadet/: __init__.py  app.py  nasa_import.py
src/space_cadet/data/: images.json  nasa_sources.json
tests/: test_app.py  test_nasa_import.py
