[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "space-cadet"
version = "0.1.0"
description = "Astronomy data exploration and visualization tool"
requires-python = ">=3.12"
dependencies = [
  "astropy>=6.0.0",
  "astroquery>=0.4.6",
  "numpy>=1.24.0",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/space_cadet"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=space_cadet --cov-report=term-missing --cov-fail-under=80"
