[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "space-cadet"
version = "0.1.0"
description = "Cluster-ready astronomy image explorer"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
]

[project.scripts]
space-cadet = "space_cadet.app:main"
space-cadet-import-nasa = "space_cadet.nasa_import:main"

[tool.hatch.build.targets.wheel]
packages = ["src/space_cadet"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
